# AerospaceFramework

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
analysis/: compiler-options.cmake  tools.cmake
dependencies/: CMakeLists.txt
dependencies/sofa/: CMakeLists.txt
dependencies/sofa/include/: sofa.h
dependencies/sofa/src/: bpn2xy.c  c2i06a.c  c2tcio.c  era00.c  fad03.c  faf03.c  falp03.c  fane03.c  fave03.c  obl06.c  pnm06a.c  rx.c  ry.c  s06.c  sp00.c  tr.c  utcut1.c
script/: dl_dut1.py  dl_leap_seconds.py  download_data.py  iers_tools.py
src/: .clang-tidy  CMakeLists.txt
src/geometry/: statevector.cpp  statevector.h  tensor.cpp  tensor.h  transformations.cpp  transformations.h  vector.cpp  vector.h
src/geometry/frame/: ecef.cpp  ecef.h  eci.cpp  eci.h  frame.h  frameimpl.cpp  frameimpl.h  local.cpp  local.h  vehicleframe.cpp  vehicleframe.h  wgs84.cpp  wgs84.h
src/time/: calendartime.h  classicaljuliandate.cpp  classicaljuliandate.h  conversion_helpers.cpp  conversion_helpers.h  conversion_internals.cpp  conversion_internals.h  conversions.cpp  conversions.h  julianliketime.h  julianliketimeimp.cpp  julianliketimeimp.h  modifiedjuliandate.cpp  modifiedjuliandate.h  scaledjulianlike.h  tai.cpp  tai.h  time.h  timepoint.h  tt.cpp  tt.h  ut1.cpp  ut1.h  utc.cpp  utc.h
src/util/: asf_definitions.h  bilinearinterpolator.cpp  bilinearinterpolator.h  definitions.h  interpolatorfactory.cpp  interpolatorfactory.h  sofa_helper.cpp  sofa_helper.h
src/util/sofa/: anp.c  c2ixys.c  c2t06a.c  cal2jd.c  cp.c  cr.c  dat.c  dtf2d.c  fae03.c  faju03.c  fal03.c  fama03.c  fame03.c  faom03.c  fapa03.c  fasa03.c  faur03.c  fw2m.c  ir.c  jd2cal.c  nut00a.c  nut06a.c  pfw06.c  pom00.c  rxr.c  rz.c  taiut1.c  ut1tai.c  ut1tt.c  utctai.c  xy06.c
test/: .clang-tidy  CMakeLists.txt  main.cpp
test/geometry/: testtensor.cpp  testtransformation.cpp  testvector.cpp
test/geometry/frame/: testecef.cpp  testlocal.cpp  testvehicleframe.cpp  testwgs84.cpp
test/mock/: mockcjd.h  mockstatevector.h  mocktensor.h  mockvector.h
test/time/: testconv_helpers.cpp  testconversion.cpp  testtai.cpp  testtt.cpp  testut1.cpp  testutc.cpp
test/util/: testsofa_helpers.cpp
