cmake_minimum_required(VERSION 3.13)

set(SOFA_HDRS
    "${CMAKE_CURRENT_SOURCE_DIR}/include/sofa.h"
    )
set(SOFA_SRCS
    "${CMAKE_CURRENT_SOURCE_DIR}/src/utcut1.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/ut1tai.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/ut1tt.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/c2t06a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/xy06.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/tr.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/jd2cal.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/dat.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/utctai.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/taiut1.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/c2i06a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/era00.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/sp00.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/pom00.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/c2tcio.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/falp03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/faf03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/fad03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/faom03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/fave03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/fae03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/fama03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/faju03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/fasa03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/fame03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/faur03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/fane03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/fapa03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/fal03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/dtf2d.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/cal2jd.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/pnm06a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/cr.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/bpn2xy.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/s06.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/c2ixys.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/anp.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/ir.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rz.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/pfw06.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/cp.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/c2tcio.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/nut00a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/nut06a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/fw2m.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rx.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rxr.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/ry.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/obl06.c"
)

add_library(sofa SHARED ${SOFA_HDRS} ${SOFA_SRCS})
target_include_directories(sofa PUBLIC      "${CMAKE_CURRENT_SOURCE_DIR}/include"
                                PRIVATE     "${CMAKE_CURRENT_SOURCE_DIR}/src")
