cmake_minimum_required(VERSION 3.13)

set(SOFA_HDRS
    "${CMAKE_CURRENT_SOURCE_DIR}/include/sofa.h"
    )
set(SOFA_SRCS
    "${CMAKE_CURRENT_SOURCE_DIR}/src/a2af.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/a2tf.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/ab.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/ae2hd.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/af2a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/anp.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/anpm.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/apcg.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/apcg13.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/apci.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/apci13.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/apco.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/apco13.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/apcs.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/apcs13.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/aper.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/aper13.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/apio.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/apio13.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/atcc13.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/atccq.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/atci13.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/atciq.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/atciqn.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/atciqz.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/atco13.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/atic13.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/aticq.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/aticqn.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/atio13.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/atioq.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/atoc13.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/atoi13.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/atoiq.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/bi00.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/bp00.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/bp06.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/bpn2xy.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/c2i00a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/c2i00b.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/c2i06a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/c2ibpn.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/c2ixy.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/c2ixys.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/c2s.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/c2t00a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/c2t00b.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/c2t06a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/c2tcio.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/c2teqx.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/c2tpe.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/c2txy.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/cal2jd.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/cp.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/cpv.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/cr.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/d2dtf.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/d2tf.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/dat.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/dtdb.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/dtf2d.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/eceq06.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/ecm06.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/ee00.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/ee00a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/ee00b.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/ee06a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/eect00.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/eform.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/eo06a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/eors.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/epb.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/epb2jd.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/epj.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/epj2jd.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/epv00.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/eqec06.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/eqeq94.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/era00.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/fad03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/fae03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/faf03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/faju03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/fal03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/falp03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/fama03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/fame03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/fane03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/faom03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/fapa03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/fasa03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/faur03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/fave03.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/fk425.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/fk45z.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/fk524.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/fk52h.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/fk54z.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/fk5hip.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/fk5hz.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/fw2m.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/fw2xy.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/g2icrs.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/gc2gd.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/gc2gde.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/gd2gc.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/gd2gce.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/gmst00.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/gmst06.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/gmst82.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/gst00a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/gst00b.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/gst06.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/gst06a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/gst94.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/h2fk5.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/hd2ae.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/hd2pa.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/hfk5z.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/icrs2g.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/ir.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/jd2cal.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/jdcalf.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/ld.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/ldn.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/ldsun.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/lteceq.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/ltecm.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/lteqec.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/ltp.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/ltpb.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/ltpecl.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/ltpequ.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/moon98.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/num00a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/num00b.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/num06a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/numat.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/nut00a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/nut00b.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/nut06a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/nut80.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/nutm80.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/obl06.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/obl80.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/p06e.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/p2pv.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/p2s.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/pap.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/pas.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/pb06.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/pdp.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/pfw06.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/plan94.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/pm.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/pmat00.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/pmat06.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/pmat76.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/pmp.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/pmpx.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/pmsafe.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/pn.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/pn00.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/pn00a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/pn00b.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/pn06.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/pn06a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/pnm00a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/pnm00b.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/pnm06a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/pnm80.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/pom00.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/ppp.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/ppsp.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/pr00.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/prec76.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/pv2p.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/pv2s.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/pvdpv.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/pvm.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/pvmpv.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/pvppv.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/pvstar.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/pvtob.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/pvu.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/pvup.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/pvxpv.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/pxp.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/refco.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rm2v.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rv2m.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rx.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rxp.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rxpv.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rxr.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/ry.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/rz.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/s00.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/s00a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/s00b.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/s06.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/s06a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/s2c.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/s2p.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/s2pv.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/s2xpv.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/sepp.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/seps.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/sofam.h"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/sp00.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/starpm.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/starpv.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/sxp.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/sxpv.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/taitt.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/taiut1.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/taiutc.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/tcbtdb.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/tcgtt.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/tdbtcb.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/tdbtt.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/tf2a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/tf2d.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/tpors.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/tporv.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/tpsts.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/tpstv.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/tpxes.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/tpxev.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/tr.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/trxp.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/trxpv.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/t_sofa_c.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/tttai.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/tttcg.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/tttdb.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/ttut1.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/ut1tai.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/ut1tt.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/ut1utc.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/utctai.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/utcut1.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/xy06.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/xys00a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/xys00b.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/xys06a.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/zp.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/zpv.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/zr.c"
)

add_library(sofa SHARED ${SOFA_HDRS} ${SOFA_SRCS})
target_include_directories(sofa PUBLIC      "${CMAKE_CURRENT_SOURCE_DIR}/include"
                                PRIVATE     "${CMAKE_CURRENT_SOURCE_DIR}/src")
